@@ -21,6 +21,12 @@
 #
 #conf_dir=/var/cache/shine/conf
 
+
+#
+# The Lustre version managed by Shine.
+#
+#ie: lustre_version=1.8.5
+
 #
 # BACKEND 
 #
