@@ -1,3 +1,6 @@
+2011-08-28 Aurelien Degremont  <aurelien.degremont@cea.fr>
+	* Support quota options for Lustre 1.x and 2.x (ticket #90).
+
 2011-08-12 Aurelien Degremont  <aurelien.degremont@cea.fr>
 	* Handle "mounted but not loaded" state (ticket #63).
 
